# ray_tracing

./: .gitmodules  CMakeLists.txt  Makefile  rtx.h
src/: app.c  camera.c  controller.c  framebuffer.c  main.c  object.c  phong.c  projection.c  ray.c
